--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 
       <div class="row">
         <div class="col-xs-12 col-md-4 section-heading">
-          <h1>Other Activities</h1>
+          <h1>Miscs</h1>
 
         </div>
         <div class="col-xs-12 col-md-8 section-heading">
