--- a/index.html
+++ b/index.html
@@ -101,9 +101,6 @@
 
 
 
-
-
-
           <li class="nav-item">
             <a href="/#projects" data-target="#projects">
 
@@ -123,7 +120,7 @@
           <li class="nav-item">
             <a href="/#activities" data-target="#activities">
 
-              <span>Activities</span>
+              <span>Miscs</span>
             </a>
           </li>
 
