--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                 Starting in May 2024, I am currently interning at Founder Securities in Shanghai as a Quantitative Algorithm Researcher. 
                 During this internship, I am applying a series of data analysis and data-driven modeling methods,
                 which I have developed during my industrial engineering researches at Alibaba Cloud Intellig, to the field of quantitative finance. 
-                My main tasks involve independently constructing alpha models and conducting factor mining projects using machine learning and deep learning methods.
+                My main tasks involve independently constructing alpha models and conducting factor mining using machine learning and deep learning methods.
               </span>
             </li>
 
