--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             and I have solid research experience and insights in data processing, data mining, time series analysis, multimodal information fusion, and regression modeling in the field of process industry.
 
             <br><br>Although my main research focuses on industrial soft sensor modeling through multisource information fusion methods,
-            Driven by personal interest, I have also applied my knowledge to the field of quantitative finance and engaged in some related projects.
+            driven by personal interest, I have also applied my knowledge to the field of quantitative finance and engaged in some related projects.
             In addition to conducting research programs at school, I also participate in various internships to gain work experience.
 
             <br><br>I believe that research programs should be closely aligned with real-world needs, and the outcomes should be able to serve and create value in practice.
