--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div id="profile">
 
 
-            <div class="portrait" style="background-image: url('img/Yuchen.jpg');"></div>
+            <div class="portrait" style="background-image: url('img/Yuchen3.jpg');"></div>
             <meta itemprop="image" content="img/tantang.jpg">
 
 
